--- a/app/src/main/res/layout/activity_fitbit_connection.xml
+++ b/app/src/main/res/layout/activity_fitbit_connection.xml
@@ -8,95 +8,100 @@ android:layout_height="match_parent"
 android:background="@drawable/main_background"
 tools:context=".Controller.Signup.FitbitConnection">
 
->
 
-
-<View
-    android:id="@+id/white_bg"
-    android:layout_width="match_parent"
-    android:layout_height="130dp"
-    android:layout_alignParentStart="true"
-    android:layout_alignParentTop="true" />
-
-<TextView
-    android:id="@+id/titleofscreen"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:fontFamily="@font/montserrat"
-    android:layout_centerHorizontal="true"
-    android:layout_marginTop="50dp"
-    android:text="@string/connect_to_fitbit"
-    android:gravity="center"
-    android:textColor="#000000"
-    android:textSize="25sp" />
-
-    <LinearLayout
+    <View
+        android:id="@+id/white_bg"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/white_bg"
-        android:background="@drawable/layout_rounded_bg"
-        android:gravity="center"
-        android:orientation="vertical">
-
+        android:layout_height="130dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true" />
 
     <TextView
-        android:id="@+id/description"
-        android:layout_width="370dp"
-        android:layout_height="85dp"
+        android:id="@+id/titleofscreen"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:fontFamily="@font/montserrat"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"
+        android:text="@string/connect_to_fitbit"
         android:gravity="center"
-        android:text="@string/fitbit_desc"
-        android:layout_marginTop="30dp"
-        android:textColor="@color/Grey"
-        android:textSize="15sp" />
-
-
-    <LinearLayout
-        android:id="@+id/mainLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:paddingTop="20dp"
-        android:gravity="center"
-        android:paddingEnd="10dp">
-
-        <ImageView
-            android:id="@+id/fitbitLogo"
-            android:layout_width="300dp"
-            android:layout_height="150dp"
-            android:src="@drawable/fitbit_logo" />
-
-        <Button
-            android:id="@+id/connectFitbit"
-            android:layout_width="wrap_content"
-            android:layout_height="36dp"
-            android:background="#4CA1D3"
-            android:fontFamily="@font/montserrat"
-            android:gravity="center"
-            android:padding="10dp"
-            android:text="Connect To Fitbit"
-            android:textColor="#ffffff" />
-
-        <TextView
-            android:id="@+id/status"
-            android:layout_width="320dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="31dp"
-            android:fontFamily="@font/montserrat"
-            android:padding="10dp"
-            android:text="Status: "
-            android:textAlignment="center"
-            android:textColor="@color/colorPrimaryDark"
-            android:textSize="18sp" />
-
-    </LinearLayout><!--End main layout-->
-
+        android:textColor="@color/black"
+        android:textSize="25sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/white_bg"
+            android:layout_alignParentBottom="true"
+            android:background="@drawable/layout_rounded_bg"
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
+
+
+            <TextView
+                android:id="@+id/description"
+                android:layout_width="370dp"
+                android:layout_height="85dp"
+                android:layout_marginTop="30dp"
+                android:fontFamily="@font/montserrat"
+                android:gravity="center"
+                android:text="@string/fitbit_desc"
+                android:textColor="@color/Grey"
+                android:textSize="15sp" />
+
+
+            <LinearLayout
+                android:id="@+id/mainLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/layout_rounded_bg"
+                android:gravity="center_horizontal"
+                android:orientation="vertical"
+                android:paddingEnd="10dp">
+
+                <ImageView
+                    android:id="@+id/fitbitLogo"
+                    android:layout_width="300dp"
+                    android:layout_height="150dp"
+                    android:layout_marginTop="30dp"
+                    android:layout_marginBottom="30dp"
+
+                    android:src="@drawable/fitbit_logo" />
+
+                <TextView
+                    android:id="@+id/status"
+                    android:layout_width="320dp"
+                    android:layout_height="wrap_content"
+                    android:padding="10dp"
+                    android:fontFamily="@font/montserrat"
+                    android:text="@string/status_not_connected"
+                    android:textAlignment="center"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="18sp" />
+
+                <Button
+                    android:id="@+id/connectFitbit"
+                    android:layout_width="250dp"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="20dp"
+                    android:background="@drawable/main_button"
+                    android:fontFamily="@font/montserrat"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:text="@string/connect_to_fitbit"
+                    android:textColor="#ffffff" />
+
+            </LinearLayout><!--End main layout-->
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/nav"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="160dp"
-            android:gravity="center">
+            android:layout_alignParentBottom="true"
+            android:layout_gravity="bottom">
 
 
             <Button
@@ -105,8 +110,6 @@ tools:context=".Controller.Signup.FitbitConnection">
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@android:color/transparent"
-                android:backgroundTint="#00FFFFFF"
-                android:gravity="center"
                 android:text="@string/back" />
 
 
@@ -123,11 +126,9 @@ tools:context=".Controller.Signup.FitbitConnection">
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@android:color/transparent"
-                android:gravity="center"
                 android:text="@string/next" />
 
 
         </LinearLayout>
-    </LinearLayout>
 
 </RelativeLayout>
