--- a/app/src/main/res/layout/activity_log_in_page.xml
+++ b/app/src/main/res/layout/activity_log_in_page.xml
@@ -58,7 +58,7 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/forgetPassword"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="3dp"
         android:ems="10"
         android:hint="@string/password"
         android:inputType="textPassword"
@@ -72,14 +72,14 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="230dp"
+        android:paddingEnd="5dp"
         android:clickable="true"
         android:focusable="true"
         android:fontFamily="@font/montserrat"
         android:text="@string/forgot_password"
         android:textAlignment="textEnd"
         android:textColor="@color/colorAccent"
-        android:textSize="18sp"
-        android:textStyle="italic" />
+        android:textSize="16sp" />
 
 
     <TextView
