--- a/app/src/main/res/layout/activity_log_in_page.xml
+++ b/app/src/main/res/layout/activity_log_in_page.xml
@@ -2,62 +2,123 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:clipToOutline="true"
+    android:background="#4D4CA1D3"
     tools:context=".LogInPage">
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/logo" />
+    <View
+        android:id="@+id/white_frame"
+        android:layout_width="412dp"
+        android:layout_height="545dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="147dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="0dp"
+        android:background="@drawable/white_frame" />
+    <View
+        android:id="@+id/serene_logo"
+        android:layout_width="411dp"
+        android:layout_height="180dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="-1dp"
+        android:layout_marginLeft="-1dp"
+        android:layout_marginTop="177dp"
+        android:background="@drawable/serene_logo" />
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
+        android:layout_width="321dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="200dp"
-        android:text="Welcome to Serene, plase login below :"
-        android:textColor="#0F0F0F"
-        android:textSize="18sp" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerInParent="true"
+        android:layout_marginStart="49dp"
+        android:layout_marginBottom="354dp"
+        android:fontFamily="Roboto"
+        android:text="Welcome to Serene, please login below:"
+        android:textAlignment="center"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/Email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="300dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="282dp"
         android:ems="10"
         android:hint="Email "
-        android:inputType="textEmailAddress" />
+        android:inputType="textEmailAddress"
+        android:textColor="#B1B0B0"/>
 
     <EditText
         android:id="@+id/Password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="400dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="233dp"
         android:ems="10"
         android:hint="Password "
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        android:textColor="#B1B0B0"/>
 
     <Button
         android:id="@+id/Log_In"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="150dp"
-        android:layout_marginTop="500dp"
-        android:background="#FFFFFF"
+        android:layout_width="102dp"
+        android:layout_height="29dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="153dp"
+        android:layout_marginBottom="175dp"
+        android:fontFamily="sans-serif-medium"
         android:text="LogIn"
-        android:textColor="#3D8EC7" />
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="#4CA1D3"
+        android:textSize="18sp"
+        android:typeface="normal" />
 
     <TextView
         android:id="@+id/sign_up"
+        android:layout_width="321dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerInParent="true"
+        android:layout_marginStart="51dp"
+        android:layout_marginBottom="114dp"
+        android:fontFamily="Roboto"
+        android:text="If you don't have an account, SIGN UP"
+        android:textAlignment="center"
+        android:textSize="18sp"
+        android:textStyle="normal"/>
+
+    <TextView
+        android:id="@+id/description3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="600dp"
-        android:text="If you don't have an account, sign up here" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerInParent="true"
+        android:layout_marginStart="300dp"
+        android:layout_marginBottom="99dp"
+        android:fontFamily="Roboto"
+        android:text="─────"
+        android:textAlignment="center"
+        android:textSize="18sp"
+        android:textStyle="normal" />
 
 </RelativeLayout>
