--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -131,7 +131,7 @@
         android:textColor="#B1B0B0" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/signup_withgoogle"
         android:layout_width="290dp"
         android:layout_height="112dp"
         android:layout_alignParentStart="true"
