--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -33,9 +33,9 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="-1dp"
-        android:layout_marginLeft="-1dp"
-        android:layout_marginTop="190dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginLeft="2dp"
+        android:layout_marginTop="143dp"
         android:background="@drawable/serene_logo" />
 
     <TextView
@@ -137,14 +137,25 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="67dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginStart="54dp"
+        android:layout_marginBottom="14dp"
         android:clickable="true"
         app:srcCompat="@drawable/signup_withgoogle" />
- <LinearLayout
+
+    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="670dp">
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id = "@+id/layout"
+        android:layout_width = "wrap_content"
+        android:layout_height = "wrap_content"
+        android:orientation = "vertical">
+    </LinearLayout>
+
     <Button
         android:id="@+id/reg_btn"
         android:layout_width="102dp"
@@ -152,8 +163,9 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="152dp"
-        android:layout_marginBottom="100dp"
+        android:layout_marginStart="148dp"
+        android:layout_marginBottom="122dp"
+        android:background="#FFFFFF"
         android:clickable="true"
         android:fontFamily="sans-serif-medium"
         android:text="Next"
@@ -162,17 +174,7 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="#4CA1D3"
         android:textSize="18sp"
-        android:typeface="normal"
-        android:background="#FFFFFF"/>
-
-</LinearLayout>
-
-    <LinearLayout
-        android:id = "@+id/layout"
-        android:layout_width = "wrap_content"
-        android:layout_height = "wrap_content"
-        android:orientation = "vertical">
-    </LinearLayout>
+        android:typeface="normal" />
 
 </RelativeLayout>
 
