--- a/app/src/main/res/layout/fragment_drafts.xml
+++ b/app/src/main/res/layout/fragment_drafts.xml
@@ -30,54 +30,9 @@
         android:layout_marginStart="61dp"
         android:layout_marginTop="90dp"
         android:fontFamily="@font/montserrat"
-        android:text="Home"
+        android:text="Drafts"
         android:textColor="#000000"
         android:textSize="30sp" />
-
-    <TextView
-        android:id="@+id/text1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="215dp"
-        android:fontFamily="@font/montserrat"
-        android:text="Anxiety Level (throughout the week)"
-        android:textColor="#817889"
-        android:textSize="18sp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/text2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="27dp"
-        android:layout_marginTop="463dp"
-        android:fontFamily="@font/montserrat"
-        android:text="Improvement"
-        android:textColor="#817889"
-        android:textSize="18sp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/text3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="23dp"
-        android:layout_marginTop="601dp"
-        android:fontFamily="@font/montserrat"
-        android:text="Next Appointment"
-        android:textColor="#817889"
-        android:textSize="18sp"
-        android:textStyle="bold" />
 
     <ImageView
         android:id="@+id/bell_icon"
