--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,18 +8,27 @@
     <fragment
         android:id="@+id/navigation_home"
         android:name="com.ksu.serene.ui.home.HomeFragment"
-        android:label="@string/title_home"
+        android:label="Home"
         tools:layout="@layout/fragment_home" />
 
+    <!--android:name NEEDS TO BE UPDATED-->
     <fragment
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_report"
         android:name="com.ksu.serene.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        android:label="Report"
+        tools:layout="@layout/fragment_report" />
 
+    <!--android:name NEEDS TO BE UPDATED-->
     <fragment
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_drafts"
         android:name="com.ksu.serene.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        android:label="Drafts"
+        tools:layout="@layout/fragment_drafts" />
+
+    <!--android:name NEEDS TO BE UPDATED-->
+    <fragment
+        android:id="@+id/navigation_calendar"
+        android:name="com.ksu.serene.ui.home.HomeFragment"
+        android:label="Calendar"
+        tools:layout="@layout/fragment_calendar" />
 </navigation>
