--- a/app/src/main/res/layout/activity_sociodemo.xml
+++ b/app/src/main/res/layout/activity_sociodemo.xml
@@ -97,7 +97,8 @@
         android:layout_marginEnd="100dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:hint="ex; 21"/>
+        android:hint="ex; 21"
+        />
 </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
