--- a/app/src/main/res/layout/activity_log_in_page.xml
+++ b/app/src/main/res/layout/activity_log_in_page.xml
@@ -20,6 +20,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="0dp"
         android:background="@drawable/white_frame" />
+
     <View
         android:id="@+id/serene_logo"
         android:layout_width="411dp"
@@ -27,9 +28,9 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="-1dp"
-        android:layout_marginLeft="-1dp"
-        android:layout_marginTop="177dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="131dp"
         android:background="@drawable/serene_logo" />
 
     <TextView
@@ -78,10 +79,12 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="153dp"
-        android:layout_marginBottom="175dp"
+        android:layout_marginStart="159dp"
+        android:layout_marginBottom="173dp"
+        android:background="#FFFFFF"
+        android:clickable="true"
         android:fontFamily="sans-serif-medium"
-        android:text="LogIn"
+        android:text="Login"
         android:textAlignment="center"
         android:textAllCaps="true"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
