--- a/app/src/main/res/layout/activity_welcome_page.xml
+++ b/app/src/main/res/layout/activity_welcome_page.xml
@@ -25,10 +25,13 @@
         android:id="@+id/serene_logo"
         android:layout_width="411dp"
         android:layout_height="180dp"
+        android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="-2dp"
-        android:layout_marginTop="244dp"
+        android:layout_centerInParent="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="192dp"
         android:background="@drawable/serene_logo" />
 
     <TextView
