--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -21,29 +21,29 @@
         android:layout_marginBottom="639dp"
         android:background="@drawable/white_bg" />
 
+
     <TextView
         android:id="@+id/titleofscreen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="61dp"
-        android:layout_marginTop="90dp"
+        android:layout_marginStart="55dp"
+        android:layout_marginTop="76dp"
         android:fontFamily="@font/montserrat"
         android:text="Calendar"
         android:textColor="#000000"
         android:textSize="30sp" />
 
-
     <TextView
-        android:id="@+id/text1"
+        android:id="@+id/full_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="31dp"
-        android:layout_marginTop="506dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="436dp"
         android:fontFamily="@font/montserrat"
         android:text="Appointments"
         android:textColor="#FF6969"
@@ -51,39 +51,19 @@
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/text2"
+        android:id="@+id/email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="29dp"
-        android:layout_marginTop="667dp"
+        android:layout_marginStart="34dp"
+        android:layout_marginTop="544dp"
         android:fontFamily="@font/montserrat"
         android:text="Medicine"
         android:textColor="#4CA758"
         android:textSize="18sp"
         android:textStyle="bold" />
-
-    <ImageView
-        android:id="@+id/bell_icon"
-        android:layout_width="38dp"
-        android:layout_height="35dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="39dp"
-        android:layout_marginEnd="122dp"
-        app:srcCompat="@drawable/ic_bell_icon" />
-
-    <ImageView
-        android:id="@+id/profile_icon"
-        android:layout_width="54dp"
-        android:layout_height="47dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="29dp"
-        android:layout_marginEnd="27dp"
-        app:srcCompat="@drawable/ic_profile_icon" />
 
     <CalendarView
         android:id="@+id/calendarView2"
@@ -93,7 +73,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="187dp"
+        android:layout_marginTop="125dp"
         android:background="#FFFFFF" />
 
 
