--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -27,15 +27,15 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="61dp"
-        android:layout_marginTop="90dp"
+        android:layout_marginStart="49dp"
+        android:layout_marginTop="65dp"
         android:fontFamily="@font/montserrat"
         android:text="Home"
         android:textColor="#000000"
         android:textSize="30sp" />
 
     <TextView
-        android:id="@+id/text1"
+        android:id="@+id/full_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -50,7 +50,7 @@
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/text2"
+        android:id="@+id/email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -78,26 +78,6 @@
         android:textColor="#817889"
         android:textSize="18sp"
         android:textStyle="bold" />
-
-    <ImageView
-        android:id="@+id/bell_icon"
-        android:layout_width="38dp"
-        android:layout_height="35dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="39dp"
-        android:layout_marginEnd="122dp"
-        app:srcCompat="@drawable/ic_bell_icon" />
-
-    <ImageView
-        android:id="@+id/profile_icon"
-        android:layout_width="54dp"
-        android:layout_height="47dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="29dp"
-        android:layout_marginEnd="27dp"
-        app:srcCompat="@drawable/ic_profile_icon" />
 
 
     <!-- arrow-left -->
