--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,9 +8,23 @@
 
 
     <View
+        android:id="@+id/white_bg2"
+        android:layout_width="match_parent"
+        android:layout_height="107dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="-2dp"
+        android:layout_marginTop="583dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginBottom="4dp"
+        android:background="@drawable/white_bg" />
+
+    <View
         android:id="@+id/white_bg"
         android:layout_width="match_parent"
-        android:layout_height="186dp"
+        android:layout_height="107dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
@@ -18,7 +32,7 @@
         android:layout_marginStart="0dp"
         android:layout_marginTop="-2dp"
         android:layout_marginEnd="0dp"
-        android:layout_marginBottom="639dp"
+        android:layout_marginBottom="589dp"
         android:background="@drawable/white_bg" />
 
     <TextView
@@ -27,8 +41,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="49dp"
-        android:layout_marginTop="65dp"
+        android:layout_marginStart="39dp"
+        android:layout_marginTop="30dp"
         android:fontFamily="@font/montserrat"
         android:text="Home"
         android:textColor="#000000"
@@ -41,8 +55,8 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="215dp"
+        android:layout_marginStart="21dp"
+        android:layout_marginTop="104dp"
         android:fontFamily="@font/montserrat"
         android:text="Anxiety Level (throughout the week)"
         android:textColor="#817889"
@@ -55,9 +69,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="27dp"
-        android:layout_marginTop="463dp"
+        android:layout_centerInParent="true"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="344dp"
         android:fontFamily="@font/montserrat"
         android:text="Improvement"
         android:textColor="#817889"
@@ -71,8 +85,8 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="23dp"
-        android:layout_marginTop="601dp"
+        android:layout_marginStart="33dp"
+        android:layout_marginTop="428dp"
         android:fontFamily="@font/montserrat"
         android:text="Next Appointment"
         android:textColor="#817889"
