--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.ksu.serene.Controller.Homepage.home.HomeFragment"
+        android:name="com.ksu.serene.Controller.Homepage.Home.HomeFragment"
         android:label="Home"
         tools:layout="@layout/fragment_home" />
 
