--- a/app/src/main/res/layout/edit_socio.xml
+++ b/app/src/main/res/layout/edit_socio.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -335,7 +335,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="151dp"
-        android:layout_marginTop="680dp"
+        android:layout_marginBottom="100dp"
         android:background="#4CA1D3"
         android:ellipsize="none"
         android:text="Save"
@@ -343,4 +343,4 @@
 
 
 
-</FrameLayout>
+</RelativeLayout>
