--- a/app/src/main/res/layout/editprofile.xml
+++ b/app/src/main/res/layout/editprofile.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -40,7 +40,7 @@
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginStart="151dp"
-            android:layout_marginBottom="50dp"
+            android:layout_marginBottom="620dp"
             android:background="#95BBD1"
             android:ellipsize="none"
             android:text="Choose Image"
@@ -171,4 +171,4 @@
         android:layout_marginTop="570dp"/>
     </LinearLayout>
 
-</FrameLayout>
+</RelativeLayout>
