--- a/app/src/main/res/layout/fragment_report.xml
+++ b/app/src/main/res/layout/fragment_report.xml
@@ -46,7 +46,7 @@
                 android:id="@+id/radioButton2"
                 android:layout_width="362dp"
                 android:layout_height="54dp"
-                android:text="Last Weeks"
+                android:text="Last Month"
                 android:layout_marginStart="22dp"
                 android:layout_marginTop="20dp"
                 android:layout_alignParentStart="true"
@@ -70,13 +70,6 @@
                 android:background="@drawable/white_background"
                 android:focusable="auto" />
 
-            <ImageView
-                android:id="@+id/go_to3"
-                android:layout_width="70dp"
-                android:layout_height="33dp"
-                android:layout_marginEnd="0dp"
-
-                app:srcCompat="@drawable/ic_go_to"/>
 
 
 
@@ -97,6 +90,7 @@
         android:textSize="30sp" />
 
     <LinearLayout
+        android:id="@+id/data_picker"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
