--- a/app/src/main/res/layout/patient_report.xml
+++ b/app/src/main/res/layout/patient_report.xml
@@ -5,8 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    >
+    android:layout_height="fill_parent">
 
     <View
         android:id="@+id/white_bg"
@@ -112,11 +111,11 @@
                 android:textColor="#817889"
                 android:textSize="18sp"
                 android:textStyle="bold" />
-
-            <View
-                android:id="@+id/AL_view"
+            <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="200dp"
+                android:id="@+id/AL_graph">
+            </ImageView>
 
             <Space
                 android:layout_width="match_parent"
